--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
 $font-primary: 'Poppins',Arial, sans-serif;
 
 $white: #fff;
-$black: #ffffff;
+$black: #000000;
 $darken: #232931;
 
 $primary: #ffbd39;
